Khan-Academy/css/index.css
/* ... */
.alert input {
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	right: 0.75rem;
	padding: 0.25rem;
}

.alert input:is(:hover, :focus) {
	border: 2px solid white;
	right: calc(0.75rem - 2px);
}

.alert a {
	color: white;
}

.alert a:is(:hover, :focus) {
	border-bottom: solid 2px white;
	border-radius: 0 0 1px 1px;
}

/* #endregion */

/* #region "Skip To Content" link */

a[href="#main-content"] {
	z-index: 1;
	position: absolute;
	top: -5rem;
	left: -5rem;
	transition: opacity 1s;
	background: white;
	padding: 1rem;
	border: 1px solid black;
	transition: top 1s, left 1s;
}

a[href="#main-content"]:focus {
	top: 1rem;
	left: 1rem;
}

/* #endregion */

/* #region Nav */

header nav {
	height: 3rem;
	padding: 0.5rem 1rem 1rem 1rem;
	max-width: 1200px;
	margin: auto;
	font-family: 'Lato', sans-serif;
	font-weight: bold;
	font-size: 16px;
	text-align: center;
	color: hsl(219, 89%, 52%);
	border-bottom: 1px solid rgb(214, 216, 218);
}

header nav:nth-of-type(2) {
	display: none;
}

header nav > div:first-of-type {
	float: left;
}

header nav > div:first-of-type > * {
	float: left;
	height: 2rem;
	margin-right: 2.5rem;
}

header nav > a {
	display: inline-block;
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
}
header nav > a:hover {
	fill: hsl(219, 89%, 52%);
}

header nav > a:is(:active, :focus) {
	outline: 4px solid hsl(219, 89%, 52%);
}

header nav > div:last-of-type {
	float: right;
}

header nav > div:last-of-type > div > * {
	display: inline-block;
	height: 2rem;
	line-height: 2rem;
	text-decoration: none;
	margin-right: 1rem;
	color: hsl(219, 89%, 52%);
}

header nav > div:last-of-type > div > *:is(:active, :focus) {
  border-bottom: 2px solid rgb(24, 101, 242);
}

/* #region Search Form */

form {
	padding: 0.25rem;
	border-radius: 0.1rem;
	background: rgb(240, 241, 242);
}

form:hover {
	background: rgb(227, 229, 230);
}

form input::placeholder {
	color: hsl(219, 89%, 52%);
	opacity: 1;
}

form input {
	border: 0;
	background: none;
}

form input[type="image"] {
	position: relative;
	top: 5px;
}

/* #endregion Search Form */

/* #region Courses Dropdown */

header details {
	text-align: left;
	position: relative;
}

@media (max-width: 800px) {
	header nav:nth-of-type(1) {
		display: none;
	}
	header nav:nth-of-type(2) {
		display: block;
	}

	header nav > a {
		left: 1rem;
		transform: none;
	}

	header nav > div > a > img {
		position: relative;
		top: 5px;
	}
	header nav > div:first-of-type > * {
		margin-right: 0;
		margin-left: 1rem;
	}

	header details {
		position: static;
	}
	header details details {
		position: relative;
	}
	header details details > section {
		left: 0;
	}
	header nav:nth-of-type(2) details > ul {
		position: absolute;
		left: 0;
		right: 0;
		width: 100%;
		background: white;
	}
}

header summary {
	user-select: none;
  cursor: pointer;
	line-height: 2rem;
}

header summary::marker{
	content: "";
}

header details[open] > summary::after {
	content: " ▲";
}

header summary:is(:active, :focus) {
  border-bottom: 2px solid rgb(24, 101, 242);
}

header summary::after {
	content: " ▼";
	right: 1rem;
	font-size: 0.5rem;
	vertical-align: middle;
}

header summary > * {
  display: inline;
}

header details > section {
	z-index: 2;
	position: absolute;
	background: white;
	width: 1200px;
	top: 3rem;
	padding-bottom: 2.5rem;
	left: -1rem;
	border-bottom: 1px solid rgb(68, 68, 68);
}

header details ul {
	padding: 0;
	width: 20%;
	float: left;
}

header details ul:nth-of-type(6) {
	margin-top: -10rem;
}

header details ul:nth-of-type(7) {
	float: right;
	margin-top: -1rem;
}

header details ul:nth-of-type(8) {
	margin-top: -1rem;
}

header details ul:nth-of-type(9) {
	margin-top: -16rem;
}

header details ul:nth-of-type(10) {
	margin-top: -10rem;
}

header details ul:nth-of-type(1), details ul:nth-of-type(9) {
	padding-left: 1vw;
}

@media (max-width: 1200px) {
	header details > section {
		width: 100vw;
	}
	header details ul {
		width: 25%;
	}
	header details ul:nth-of-type(n) {
		padding-left: 0;
	}
	header details ul:nth-of-type(1), header details ul:nth-of-type(8), header details ul:nth-of-type(10) {
		padding-left: 1vw;
	}
	header details ul:nth-of-type(5) {
		margin-top: -1rem;
	}
	header details ul:nth-of-type(6) {
		float: right;
		margin-top: -1rem;
	}
	header details ul:nth-of-type(7) {
		margin-top: -2rem;
	}
	header details ul:nth-of-type(8) {
		margin-top: -12rem;
	}
	header details ul:nth-of-type(9) {
		margin-top: -6rem;
	}
	header details ul:nth-of-type(10) {
		margin-top: -19rem;
	}
}

@media (max-width: 800px) {
	header details ul {
		width: 33.33%;
	}
	header details ul:nth-of-type(n) {
		padding-left: 0;
	}
	header details ul:nth-of-type(1), header details ul:nth-of-type(4), header details ul:nth-of-type(8), header details ul:nth-of-type(10) {
		padding-left: 1vw;
	}
	header details ul:nth-of-type(4) {
		margin-top: -10rem;
	}
	header details ul:nth-of-type(5) {
		margin-top: -5rem;
	}
	header details ul:nth-of-type(8) {
		margin-top: -15rem;
	}
	header details ul:nth-of-type(9) {
		float: right;
		margin-top: -1rem;
	}
	header details ul:nth-of-type(10) {
		margin-top: -2rem;
	}
}
@media (max-width: 600px) {
	header details ul {
		width: 50%;
	}
	header details ul:nth-of-type(n) {
		margin-top: 0;
		padding-left: 0;
	}
	header details ul:nth-of-type(1), header details ul:nth-of-type(3), header details ul:nth-of-type(7), header details ul:nth-of-type(9) {
		padding-left: 1vw;
	}
	header details ul:nth-of-type(odd) {
		float: left;
	}
	header details ul:nth-of-type(even) {
		float: right;
	}
	header details ul:nth-of-type(7) {
		margin-top: -9rem;
	}
}

@media (max-width: 400px) {
	header details ul {
		width: 100%;
	}
	header details ul:nth-of-type(n) {
		padding-left: 1vw;
		margin: 0;
	}
}

header details ul > li {
	padding: .5rem 0;
	display: block;
}
/* ... */

